force-app/main/default/objects/Account/fields/Agreement_Covers__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Covers__c</fullName>
    <inlineHelpText>Single Location - only one site 
All Domestic Locations - all locations of the org
MOU- parent association only for Memorandum of Understanding
Other- any other situation, e.g. regional offices or franchises with several locations, etc. Provide detail</inlineHelpText>
    <label>Agreement Covers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Location</fullName>
                <default>true</default>
                <label>Single Location</label>
            </value>
            <value>
                <fullName>All Domestic Locations</fullName>
            </value>
            <value>
                <fullName>MOU</fullName>
            </value>
            <value>
                <fullName>Other, please describe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>