force-app/main/default/objects/Account/fields/Agreement_Flag__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Flag__c</fullName>
    <formula>IMAGE(
CASE(Agreement_Covers__c,
&quot;All Domestic Locations&quot;, &quot;/servlet/servlet.FileDownload?file=0150V00000DDGLz&quot;,
&quot;/s.gif&quot;),
TEXT(Agreement_Covers__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>New agreements on this account may be restricted, please look further if flagged</inlineHelpText>
    <label>Agreement Flag</label>
    <type>Text</type>
</CustomField>