force-app/main/default/objects/Account/fields/Bankruptcy_Type__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Type__c</fullName>
    <label>Bankruptcy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chapter 7 (new Acct. required)</fullName>
            </value>
            <value>
                <fullName>Chapter 9 (municipal)</fullName>
            </value>
            <value>
                <fullName>Chapter 11 (restructure)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>