force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>Authorized Credit Extension for Customer</description>
    <inlineHelpText>Amount of credit extended to a customer for invoicing purposes.</inlineHelpText>
    <label>Credit Limit</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>