force-app/main/default/objects/Account/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <inlineHelpText>This is the same as the Customer PO # in Saba.</inlineHelpText>
    <label>Customer PO#</label>
    <length>150</length>
    <type>Text</type>
</CustomField>