force-app/main/default/objects/Account/fields/Customer_PO_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Expiration_Date__c</fullName>
    <inlineHelpText>This is the same as the Expiration Date on the Purchase Order in Saba.</inlineHelpText>
    <label>Customer PO# Expiration Date</label>
    <type>DateTime</type>
</CustomField>