force-app/main/default/objects/Account/fields/Inherit_Parent_Terms__c.field-meta.xml
<CustomField>
    <fullName>Inherit_Parent_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if you want the Account to Inherit the 
- Available Credit 
- Payment Terms
- Invoice Delivery Method
- Invoice Delivery Email
from Parent Account</inlineHelpText>
    <label>Inherit Parent Terms</label>
    <type>Checkbox</type>
</CustomField>