force-app/main/default/objects/Account/fields/Open_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Order_Amount__c</fullName>
    <description>Sum of Orders In Process</description>
    <label>Open Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>