force-app/main/default/objects/Account/fields/Red_Cross_PO__c.field-meta.xml
<CustomField>
    <fullName>Red_Cross_PO__c</fullName>
    <description>This number is created for use with pre payment and invoice approval</description>
    <inlineHelpText>This is the same as the Purchase Order ID in Saba. If the customer issued a PO, the number they provided will go in both fields</inlineHelpText>
    <label>Red Cross PO#</label>
    <length>150</length>
    <type>Text</type>
</CustomField>