force-app/main/default/objects/Account/fields/Red_Cross_PO_expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Red_Cross_PO_expiration_Date__c</fullName>
    <description>This is the date the Red Cross PO will expire</description>
    <inlineHelpText>This is the same as the Expiration Date on the Purchase Order in Saba.</inlineHelpText>
    <label>Red Cross PO# Expiration Date</label>
    <type>Date</type>
</CustomField>