force-app/main/default/objects/Account/fields/Strategic_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Type__c</fullName>
    <label>Strategic Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Strategic_Account__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Enhanced Support</fullName>
            </value>
            <value>
                <fullName>Special Handling</fullName>
                <label>Special Handling - SCC</label>
            </value>
            <value>
                <fullName>Special Handling - Field</fullName>
            </value>
            <value>
                <fullName>SCC Scheduling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>