force-app/main/default/objects/Account/fields/Terminate_Reinstate_Date__c.field-meta.xml
<CustomField>
    <fullName>Terminate_Reinstate_Date__c</fullName>
    <inlineHelpText>This date reflects the day the account was either Terminated or Reinstated. Status other than these will not update this field.</inlineHelpText>
    <label>Terminate/Reinstate Date</label>
    <type>Date</type>
</CustomField>