force-app/main/default/objects/Account/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <inlineHelpText>This is the reason for current payment status</inlineHelpText>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payment_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Non-Payment</fullName>
                <label>Non Payment</label>
            </value>
            <value>
                <fullName>Non-Payment sent to collections agency</fullName>
                <label>Non Payment; Sent to Collections Agency</label>
            </value>
            <value>
                <fullName>Invoice Paid in Full</fullName>
            </value>
            <value>
                <fullName>Exception Granted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>