force-app/main/default/objects/Account/fields/This_is_HQ__c.field-meta.xml
<CustomField>
    <fullName>This_is_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This is HQ</label>
    <type>Checkbox</type>
</CustomField>