force-app/main/default/objects/Account/fields/Total_AR__c.field-meta.xml
<CustomField>
    <fullName>Total_AR__c</fullName>
    <formula>REPORT_Total_AR__c</formula>
    <label>Total AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>