force-app/main/default/objects/Account/validationRules/Fill_billing_Details_before_Saving_Acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_billing_Details_before_Saving_Acc</fullName>
    <active>true</active>
    <description>make billing Address required for Account with PHSS channel &#39;RCS Retail&#39;</description>
    <errorConditionFormula>AND(
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
OR(ISBLANK(BillingStreet),
ISBLANK(BillingCity),
ISBLANK(BillingState),
ISBLANK(BillingPostalCode),
ISBLANK(BillingCountry)
)
)</errorConditionFormula>
    <errorMessage>Fill billing details before saving Account with PHSS Channel Type RCS Retail.</errorMessage>
</ValidationRule>