force-app/main/default/objects/Account/validationRules/Login_Email_check_for_RCS_Channels.validationRule-meta.xml
<ValidationRule>
    <fullName>Login_Email_check_for_RCS_Channels</fullName>
    <active>true</active>
    <description>Checks Login email is entered for RCS channels</description>
    <errorConditionFormula>AND(
OR(
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)),
ISBLANK(Log_In_Email__c))</errorConditionFormula>
    <errorMessage>Red Cross Store Email field required when PHSS channel is of RCS Retail or RCS Distributor</errorMessage>
</ValidationRule>