force-app/main/default/objects/Account/validationRules/Preferred_Payment_check_for_RCS_Channels.validationRule-meta.xml
<ValidationRule>
    <fullName>Preferred_Payment_check_for_RCS_Channels</fullName>
    <active>true</active>
    <description>Checks Login email is entered for RCS channels</description>
    <errorConditionFormula>AND(
OR(
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)),
!ISPICKVAL(Preferred_Payment_type__c,&quot;Invoice&quot;))</errorConditionFormula>
    <errorDisplayField>Preferred_Payment_type__c</errorDisplayField>
    <errorMessage>Preferred payment type can only be Invoice for PHSS channel RCS Retail or RCS Distributor</errorMessage>
</ValidationRule>